rpi-conf/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.19.1 on Fri Aug  2 19:44:39 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [145:15256]
:fw-interfaces - [0:0]
:fw-open - [0:0]
:open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j open
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j open
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A fw-interfaces -i tun0 -j ACCEPT
-A open -s 192.168.1.0/24 -j ACCEPT
COMMIT
# Completed on Fri Aug  2 19:44:39 2013
# Generated by iptables-save v1.4.19.1 on Fri Aug  2 19:44:39 2013
*nat
:PREROUTING ACCEPT [4181:253462]
:INPUT ACCEPT [21:2453]
:OUTPUT ACCEPT [190:14282]
:POSTROUTING ACCEPT [342:20362]
-A POSTROUTING -s 10.1.1.2/32 -o ppp0 -j MASQUERADE
COMMIT
# Completed on Fri Aug  2 19:44:39 2013
